Increased default text width for word wrap to work correctly

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@
 }
 
 .tooltip {
-    width: 400px;
+    width: 500px;
     font-size: 200%;
     color: #222;
     background-color: #fff;
